WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61128
Fix GraphicsContext3DQt.cpp compile error
https://bugs.webkit.org/show_bug.cgi?id=61128
Summary
Fix GraphicsContext3DQt.cpp compile error
Andrew Wason
Reported
2011-05-19 08:36:38 PDT
GraphicsContext3DQt.cpp is failing to compile: ../../../Source/WebCore/platform/graphics/qt/GraphicsContext3DQt.cpp: In constructor 'WebCore::GraphicsContext3D::GraphicsContext3D(WebCore::GraphicsContext3D::Attributes, WebCore::HostWindow*, bool)': ../../../Source/WebCore/platform/graphics/qt/GraphicsContext3DQt.cpp:692: error: no match for 'operator=' in '((WebCore::GraphicsContext3D*)this)->WebCore::GraphicsContext3D::m_internal = 0' ../../../Source/JavaScriptCore/wtf/OwnPtr.h:131: note: candidates are: WTF::OwnPtr<T>& WTF::OwnPtr<T>::operator=(const WTF::PassOwnPtr<T>&) [with T = WebCore::GraphicsContext3DInternal] ../../../Source/JavaScriptCore/wtf/OwnPtr.h:72: note: WTF::OwnPtr<T>& WTF::OwnPtr<T>::operator=(std::nullptr_t) [with T = WebCore::GraphicsContext3DInternal] ../../../Source/JavaScriptCore/wtf/OwnPtr.h:83: note: WTF::OwnPtr<T>& WTF::OwnPtr<T>::operator=(const WTF::OwnPtr<T>&) [with T = WebCore::GraphicsContext3DInternal] Will attach a patch.
Attachments
Fix compilation
(1.22 KB, patch)
2011-05-19 08:39 PDT
,
Andrew Wason
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrew Wason
Comment 1
2011-05-19 08:39:55 PDT
Created
attachment 94072
[details]
Fix compilation
Darin Adler
Comment 2
2011-05-19 09:31:58 PDT
Comment on
attachment 94072
[details]
Fix compilation OK. We slightly prefer "= nullptr" to clear(), but the fix is fine either way.
WebKit Commit Bot
Comment 3
2011-05-19 11:39:25 PDT
Comment on
attachment 94072
[details]
Fix compilation Clearing flags on attachment: 94072 Committed
r86861
: <
http://trac.webkit.org/changeset/86861
>
WebKit Commit Bot
Comment 4
2011-05-19 11:39:29 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 5
2011-05-19 13:40:53 PDT
Revision
r86861
cherry-picked into qtwebkit-2.2 with commit 863c88a <
http://gitorious.org/webkit/qtwebkit/commit/863c88a
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug