2011-05-19  Andrew Wason  <rectalogic@rectalogic.com>

Reviewed by Darin Adler.

        Fix GraphicsContext3DQt.cpp compile error
        https://bugs.webkit.org/show_bug.cgi?id=61128

        * platform/graphics/qt/GraphicsContext3DQt.cpp:
        (WebCore::GraphicsContext3D::GraphicsContext3D):
         clear() m_internal OwnPtr.

Canonical link: https://commits.webkit.org/76497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86861 268f45cc-cd09-0410-ab3c-d52691b4dbfc